  Version 3.19
  1. Added patch from Stephen Frost that allows one to suppress use of the temp file that is
	created during uploads.

  Version 3.18
  1.  Doc typo fixes.
  2.  Patch from Steve Peters to default the document type to match the charset.
  3.  Fixed param() so that param(-name=>'foo',-values=>[]) sets the parameter to empty list.

  Version 3.17 Fri Feb 24 14:01:27 EST 2006
   1. Added patch from Mike Hanafey which caused 0 arguments to CGI::Cookie->new() to
	be treated as empty.
   2. Patch to CGI::Carp from Peter Whaite to fix the unfixable problem of CGI::Carp
     not behaving correctly in an eval() context.
   3. CGI::Fast->new() calls CGI->_reset_globals to avoid contamination of one session
	with another's variables.
   4. Fixed upload failure on files that contain semicolons in their names.

  Version 3.16 Wed Feb  8 13:29:11 EST 2006
   1. header() -charset option now works even when the MIME type is not "text".
   2. Fixed documentation for cookie() function and fastCGI.
   3. Upload filehandles now only closed automatically on Windows systems.
   4. Apache::Cookie compatibility fix from David Wheeler
   5. CGI::Carp->fatalsToBrowser() does not work correctly with
	mod_perl 2. No workaround is known.
   6. Fixed text status code associated with 302 redirects. Should be "Found"
	but was "Moved".
   7. Fixed charset in start_html() and header() to be in synch.

  Version 3.15 Wed Dec  7 15:13:22 EST 2005
   1. Remove extraneous "?" from self_url() when URI contains a ? but no query string.

  Version 3.14 Tue Dec  6 17:12:03 EST 2005
   1. Fixed broken scrolling_list() select attribute.
	
  Version 3.13
    1. Removed extraneous empty "?" from end of self_url().

  Version 3.12
    1. Fixed virtual_port so that it works properly with https protocol.
    2. Fixed documentation for upload_hook().
    3. Added POSTDATA documentation.
    4. Made upload_hook() work in function-oriented mode.